--- a/src/App.scss
+++ b/src/App.scss
@@ -220,20 +220,17 @@
     }
   }
 
-  button {
+  .send-name {
     background: rgba(45, 35, 182, 0.838);
     color: #fff;
     border: none;
     margin: 1rem;
-    font-size: 1.2rem;
-    padding: 0.75rem;
+    font-size: 3rem;
+    padding: 1rem;
     cursor: pointer;
     border-radius: 4px;
     transition: 0.1s ease all;
-  }
-  button:hover {
-    transition: 0.15s ease all;
-    transform: scale(1.05);
+    width: 8rem;
   }
 }
 
